--- a/lab2/tmnt.html
+++ b/lab2/tmnt.html
@@ -267,11 +267,11 @@
     </div>
   </div>
 
-  <!-- <div class="footer">
+  <div class="footer">
     <a href="http://validator.w3.org/check/referer"><img src="w3c-html.png" alt="Valid HTML5" /></a> <br />
     <a href="http://jigsaw.w3.org/css-validator/check/referer"><img src="w3c-css.png" alt="Valid CSS" /></a>
  </div>
-     -->
+    
      
   
 	</body>
