--- a/lab0/index.html
+++ b/lab0/index.html
@@ -17,7 +17,7 @@
             <li><a href="./lab1/aboutme.html">Lab02 - About Me</a></li> 
             <li><a href="./lab1/pie.html">Lab02 - Recipe </a></li>
             <li><a href="/lab2/tmnt.html">Lab03 - Movie Review</a></li>  
-            <li><a href="">Lab04</a></li> 
+            <li><a href="../lab3/Forms Lab/formlab.html">Lab04</a></li> 
             <li><a href="">Lab05</a></li> 
             <li><a href="">Lab08</a></li>
             <li><a href="">Lab09</a></li> 
