--- a/lab0/index.html
+++ b/lab0/index.html
@@ -13,12 +13,12 @@
     </div>
     <div class="container">
         <ul>
-            <li><a href="https://github.com/ydBerhane/WAP">Lab01 - Home Page</a></li>
-            <li><a href="./lab1/aboutme.html">Lab02 - About Me</a></li> 
-            <li><a href="./lab1/pie.html">Lab02 - Recipe </a></li>
-            <li><a href="/lab2/tmnt.html">Lab03 - Movie Review</a></li>  
-            <li><a href="../lab3/Forms Lab/formlab.html">Lab04</a></li> 
-            <li><a href="">Lab05</a></li> 
+            <li><a href="https://github.com/ydBerhane/WAP">Lab0 - Home Page</a></li>
+            <li><a href="./lab1/aboutme.html">Lab01 - About Me</a></li> 
+            <li><a href="./lab1/pie.html">Lab01 - Recipe </a></li>
+            <li><a href="/lab2/tmnt.html">Lab02 - Movie Review</a></li>  
+            <li><a href="./lab3/Forms Lab/formlab.html">Lab03 - forms lab</a></li> 
+            <li><a href="../lab3/Grades Exercie/gradeforms.html">Lab03 - grades exercises</a></li> 
             <li><a href="">Lab08</a></li>
             <li><a href="">Lab09</a></li> 
             <li><a href="">Lab10</a></li> 
