--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
             <li><a href="/lab2/tmnt.html">Lab02 - Movie Review</a></li>  
             <li><a href="./lab3/Forms Lab/formlab.html">Lab03 - forms lab</a></li> 
             <li><a href="../lab3/Grades Exercie/gradeforms.html">Lab03 - grades exercises</a></li> 
-            <li><a href="./lab4/taskListlab4/tsklist.html">Lab04</a></li>
-            <li><a href="./lab4/tipCalculater lab4/tipcalculater.html">Lab04</a></li> 
+            <li><a href="./lab4/taskListlab4/tsklist.html">Lab04-tasklist</a></li>
+            <li><a href="./lab4/tipCalculater lab4/tipcalculater.html">Lab04-tipcalculator</a></li> 
             <li><a href="">Lab10</a></li> 
             <li><a href="http://">Final Project</a></li>
  
