--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             <li><a href="../lab3/Grades Exercie/gradeforms.html">Lab03 - grades exercises</a></li> 
             <li><a href="./lab4/taskListlab4/tsklist.html">Lab04-tasklist</a></li>
             <li><a href="./lab4/tipCalculater lab4/tipcalculater.html">Lab04-tipcalculator</a></li> 
-            <li><a href="">Lab10</a></li> 
+            <li><a href="./LabMaze/maze/maze.html">LabMaze</a></li> 
             <li><a href="http://">Final Project</a></li>
  
      </ul>
